[gd_scene load_steps=19 format=3 uid="uid://b1m4mfjdmm725"]

[ext_resource type="Script" path="res://logic/globals/messages.gd" id="1_jpjst"]
[ext_resource type="Script" path="res://logic/ui/components/button_to_uri.gd" id="2_l5qut"]
[ext_resource type="Script" path="res://addons/markdownlabel/markdownlabel.gd" id="2_xrx86"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="3_vdktb"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="4_bx784"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="5_t2v43"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="6_q411e"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="7_o3rat"]
[ext_resource type="Script" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="8_ciyeo"]

[sub_resource type="Animation" id="Animation_8kpwv"]
resource_name = "show"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-173, -100), Vector2(-173, 7)]
}

[sub_resource type="Animation" id="Animation_56qou"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-173, 7)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_juejc"]
_data = {
"RESET": SubResource("Animation_56qou"),
"show": SubResource("Animation_8kpwv")
}

[sub_resource type="Resource" id="Resource_4ew64"]
resource_local_to_scene = true
script = ExtResource("3_vdktb")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_8u4x7"]
resource_local_to_scene = true
script = ExtResource("4_bx784")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_shqp2"]
resource_local_to_scene = true
script = ExtResource("5_t2v43")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_3uc32"]
resource_local_to_scene = true
script = ExtResource("6_q411e")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_kaotx"]
resource_local_to_scene = true
script = ExtResource("7_o3rat")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_r37pj"]
resource_local_to_scene = true
script = ExtResource("8_ciyeo")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[node name="Messages" type="Node"]
script = ExtResource("1_jpjst")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
position = Vector2i(0, 36)
size = Vector2i(292, 101)
min_size = Vector2i(200, 0)
dialog_text = "fsaldjglkdfslkgslfgkjsldfjglksjdlk"
dialog_autowrap = true

[node name="Notification" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="Panel" type="Panel" parent="Notification"]
layout_mode = 0
offset_left = -173.0
offset_top = 7.0
offset_right = 177.0
offset_bottom = 91.0

[node name="Label" type="Label" parent="Notification/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_bottom = 20.0
grow_horizontal = 2
theme_type_variation = &"HeaderLargeOverWhite"
text = "Notification title"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Notification/Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -49.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="Button2" type="Button" parent="Notification/Panel/HBoxContainer"]
layout_mode = 2
text = "See details"

[node name="ButtonToUri" type="Button" parent="Notification/Panel/HBoxContainer"]
layout_mode = 2
text = "Open In browser"
script = ExtResource("2_l5qut")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Notification"]
libraries = {
"": SubResource("AnimationLibrary_juejc")
}

[node name="Window" type="Window" parent="."]
title = "Version Xyz Available"
position = Vector2i(0, 36)
size = Vector2i(300, 300)
visible = false

[node name="MarkdownLabel" type="RichTextLabel" parent="Window"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=36]New version[/font_size]
[ul]whatever
I don't know
[/ul]
[font_size=27]Other changes[/font_size]
[ul]bla bla bla
bla bla bla
[/ul]
"
script = ExtResource("2_xrx86")
markdown_text = "# New version
* whatever
* I don't know
## Other changes
* bla bla bla
* bla bla bla
"
h1 = SubResource("Resource_4ew64")
h2 = SubResource("Resource_8u4x7")
h3 = SubResource("Resource_shqp2")
h4 = SubResource("Resource_3uc32")
h5 = SubResource("Resource_kaotx")
h6 = SubResource("Resource_r37pj")

[node name="Button" type="Button" parent="Window"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -37.0
offset_right = 29.0
grow_horizontal = 2
grow_vertical = 0
text = "open"

[node name="NotificationsList" type="VBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_right = 180.0
offset_bottom = 40.0
grow_horizontal = 2
size_flags_vertical = 2
theme_override_constants/separation = 10

[connection signal="canceled" from="AcceptDialog" to="." method="_on_accept_dialog_canceled"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
